--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
         <link rel="stylesheet" href="fui-font.css" media="screen" charset="utf-8">
-        <link rel="stylesheet" href="fui.css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="fui.next.css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="fui-theme.css" media="screen" charset="utf-8">
     </head>
-    
+
     <body>
 
       <div class="container">
